###### TWE 4.7-1 RELEASED ######
   # Improved XPDL icon

###### TWE 4.6-1 RELEASED ######
2012-08-15 Sasa Bojanic <sasaboy@together.at>
   # Start menu/desktop/taskbar icons improved

2012-07-30 Sasa Bojanic <sasaboy@together.at>
   # TWE Desktop icon now has short name

2012-07-26 Sasa Bojanic <sasaboy@together.at>
   # Max JVM memory in run scripts/shortcuts increased from 128M to 512M
   
2012-07-23 Sasa Bojanic <sasaboy@together.at>
   # Documentation: chapter Build Guide put at the end (before Release Notes)
   # Windows Installation:
      - Fixed: Size information in Control Panel
      - Added: Pin to taskbar option
      - Changed: Build ID information in Control Panel

2012-06-13 Sasa Bojanic <sasaboy@together.at>
   # changes related to linux builds with TAB

2012-05-29 Sasa Bojanic <sasaboy@together.at>
   # Modified NSIS script to use windows' "cacls.exe" to change access controls to allow everyone to writte into installation's config folder
    (TWE installation had a problem when User Access Controls (UAC) were set to the "higher level" like "Always notify" - couldn't switch configuration)

2012-05-24 Sasa Bojanic <sasaboy@together.at>
   # Changed package names for HistoryMgr and UndoHistoryMgr so all the JAR files are using different package names

###### TWE 4.5-1 RELEASED ######
2012-05-09 Sasa Bojanic <sasaboy@together.at>
   # distribution component output is now zipped into the txm-x.y-z.comp.zip
   # setup exe now supports only Java 7
   
2012-05-08 Sasa Bojanic <sasaboy@together.at>
   # signing JAR files with Together certificate canceled til the next release

2012-04-23 Sasa Bojanic <sasaboy@together.at>
   # Documentation folder removed from distribution

2012-04-09 Sasa Bojanic <sasaboy@together.at>
   # signing JAR files with Together certificate

2012-02-23 Sasa Bojanic <sasaboy@together.at>
   # Compiled code can be executed only with Java7

###### TWE 4.4-1 RELEASED ######
2011-12-26 Sasa Bojanic <sasaboy@together.at>