@@ -35,10 +35,10 @@
 #Graph.ShadowWidth = 3
 #true false
 #Graph.NameWrapping = true
-Graph.ShowGrid = true
+#Graph.ShowGrid = false
 #Graph.ShowIcon = true
 #Graph.ShowShadow = true
-Graph.ShowTransitionCondition = true
+#Graph.ShowTransitionCondition = false
 #Graph.ShowTransitionNameForCondition = false
 #Graph.DefaultTransitionStyle = NO_ROUTING_SPLINE
 #Graph.WrappingStyleWordStatus = true
@@ -73,7 +73,7 @@ Graph.ShowTransitionCondition = true
 #Graph.ActivitySelectedColor = R=248,G=242,B=14
 Graph.BackgroundColor = R=255,G=255,B=215
 #Graph.HandleColor = Color.pink
-Graph.GridColor = R=112,G=112,B=112
+#Graph.GridColor = R=112,G=112,B=112
 #Graph.MarqueeColor = SystemColor.textHighlight
 #Graph.LaneBorderColor = SystemColor.textText
 #Graph.LaneCommonExpressionColor = R=255,G=255,B=196
